--- a/tcg.css
+++ b/tcg.css
@@ -30,7 +30,7 @@ select {
 }
 
 table {
-  padding: 10px;
+  margin: 10px;
   display: inline-block;
 }
 
@@ -53,7 +53,8 @@ td img {
 }
 
 .placeholder {
-  box-sizing: border-box;
+  box-sizing: border-box; /* border won't affect height/width */
   text-align: center;
-  vertical-align: middle;
+  /* vertical-align: middle; */
+  display: inline-block;
 }
