--- a/tcg.css
+++ b/tcg.css
@@ -4,13 +4,35 @@
 }
 
 button {
-  background-color: #e6f4ff;
-  border-radius: 6px;
-  border: 1px #fff solid;
-  fill: rgba(0, 0, 0, 0.15);
+  background: linear-gradient(
+      to bottom right,
+      #009d82,
+      #60d8c6,
+      white,
+      #f9f9f9,
+      #60d8c6,
+      #009d82
+    )
+    border-box;
+  border: 5px solid transparent;
+  border-radius: 25%;
+  box-sizing: border-box;
   font-weight: 400;
   margin: 5px 2px 5px 2px;
-  padding-block: 5px;
+  vertical-align: middle;
+}
+
+.solid {
+  background: linear-gradient(
+      to bottom right,
+      #c69221,
+      #fef081,
+      white,
+      #f9f9f9,
+      #fef081,
+      #c69221
+    )
+    border-box;
 }
 
 input,
@@ -21,8 +43,8 @@ select {
   font-weight: 400;
   margin: 5px 2px 5px 2px;
   padding: 5px;
-  width: 30px;
   text-align: center;
+  width: 30px;
 }
 
 select {
@@ -30,8 +52,8 @@ select {
 }
 
 table {
-  margin: 10px;
   display: inline-block;
+  margin: 10px;
 }
 
 td img {
@@ -40,28 +62,64 @@ td img {
   margin-right: auto;
 }
 
-.header,
-.status {
-  position: sticky;
-  top: 0;
+.header {
   background-color: #fff;
+  position: sticky;
   text-align: center;
+  top: 0;
   width: 100%;
-}
-
-.solid {
-  border: 1px rgb(9, 88, 217) solid;
 }
 
 .placeholder {
   /* makes it so border won't affect height/width */
   box-sizing: border-box;
-  text-align: center;
   display: inline-block;
+  text-align: center;
 }
 
 /* this keeps cards and placeholders properly aligned */
 td .placeholder,
 td img {
   vertical-align: middle;
+}
+
+.status {
+  align-items: center;
+  background: linear-gradient(
+        to bottom right,
+        #f9f9f9,
+        white,
+        #f9f9f9,
+        white,
+        #f9f9f9,
+        white
+      )
+      padding-box,
+    linear-gradient(
+        to bottom right,
+        #fde0ec,
+        #bad5ed,
+        #d2ece3,
+        #fff,
+        #fff,
+        #d2ece3,
+        #bad5ed,
+        #fde0ec
+      )
+      border-box;
+  border-radius: 10px;
+  border: 15px solid transparent;
+  display: flex;
+  height: 5rem;
+  inset: 0px;
+  justify-content: center;
+  margin: auto;
+  max-height: 100dvh;
+  max-width: 100vw;
+  position: fixed;
+  width: 12rem;
+}
+
+.hidestatus {
+  display: none;
 }
