--- a/css.css
+++ b/css.css
@@ -1,3 +1,6 @@
+* {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 .header span {
   padding: 5px;
   display: inline-block;
@@ -108,11 +111,16 @@ ol {
   display: flex;
 }
 #card-list-div {
-  width: 200px;
+  flex: 1;
+  background-color: #fff5;
 }
 .lotto {
-  flex: 1;
+  width: 360px;
+  border: 10px solid transparent;
 }
 #id-filename {
   width: auto;
+}
+.catch-header {
+  text-align: left;
 }
