--- a/css.css
+++ b/css.css
@@ -102,15 +102,14 @@ button {
   text-align: center;
 }
 
-body::after {
-  content: '';
-  background: url('img/0_bg/fall.jpeg');
+#bg {
+  background-image: url('img/0_bg/water.jpeg');
   opacity: 0.3;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  position: absolute;
+  position: fixed;
   z-index: -1;
 }
 ol {
