--- a/css.css
+++ b/css.css
@@ -1,6 +1,75 @@
-* {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  box-sizing: border-box;
+:root {
+  font-size: 16px;
+  font-family: 'Open Sans';
+  --text-primary: #220076;
+  --text-secondary: #ececec;
+  --bg-primary: #f7f7f7;
+  --bg-secondary: #141418;
+  --transition-speed: 600ms;
+}
+body {
+  margin: 0;
+  padding: 0;
+}
+body::-webkit-scrollbar {
+  width: 2rem;
+}
+body::-webkit-scrollbar-track {
+  background: #1e1e24;
+}
+body::-webkit-scrollbar-thumb {
+  background: #6649b8;
+}
+main {
+  margin-left: 10rem;
+  padding: 1rem;
+  text-align: center;
+}
+.navbar {
+  position: fixed;
+  background-color: var(--bg-primary);
+  transition: width 600ms ease;
+}
+.navbar-nav {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+.nav-item {
+  width: 100%;
+}
+.nav-item:last-child {
+  margin-top: auto;
+}
+.nav-link {
+  display: flex;
+  align-items: center;
+  height: 5rem;
+  color: var(--text-primary);
+  text-decoration: none;
+  transition: var(--transition-speed);
+}
+.nav-link:hover {
+  filter: grayscale(0%) opacity(1);
+  background: var(--bg-secondary);
+  color: var(--text-secondary);
+}
+.link-text {
+  margin-left: 1rem;
+  text-align: center;
+  font-size: 1.5rem;
+  letter-spacing: 0.1ch;
+  width: 100%;
+}
+.nav-link img {
+  width: 5rem;
+  min-width: 5rem;
+  /* margin: 0 1.5rem;
+  */
 }
 .hide {
   display: none !important;
@@ -16,45 +85,6 @@
   right: 0;
   position: fixed;
   z-index: -1;
-}
-span {
-  text-align: center;
-}
-.header span {
-  padding: 5px;
-  display: inline-block;
-}
-.icon {
-  vertical-align: middle;
-  height: 50px;
-}
-button,
-select,
-input,
-#progressSpan {
-  border-radius: 10px;
-  padding: 10px;
-  border-color: #dbdbde;
-  padding-block: 4px;
-  background-color: #fff;
-}
-button {
-  height: 60px;
-  vertical-align: middle;
-}
-button.link {
-  background: #6abaff;
-}
-.header {
-  position: sticky;
-  text-align: center;
-  top: 0;
-}
-.contentDiv {
-  text-align: center;
-}
-.hidestatus {
-  display: none;
 }
 .showstatus {
   align-items: center;
@@ -92,9 +122,6 @@ button.link {
   position: fixed;
   width: 12rem;
 }
-
-/* 🟣🟣🟣 BINDER 🟣🟣🟣 */
-
 table {
   display: inline-block;
   margin: 10px;
@@ -115,25 +142,14 @@ td .placeholder {
   /* Keeps cards and placeholders properly aligned. Doesn't work if it's separated into the individual elements. */
   vertical-align: middle;
 }
-input {
-  width: 3em;
-  text-align: center;
-}
-
-/* 🔴🔴🔴 PULL 🔴🔴🔴 */
-
-/* 🟢 MISC 🟢 */
-
 #parent {
+  /* keeps large card from acting like mobile on desktop */
   display: flex;
 }
 iframe,
 #filenamesInput {
   display: none;
 }
-
-/* 🟠 RIGHT 🟠 */
-
 ol {
   text-align: left;
 }
@@ -153,48 +169,53 @@ ol {
   height: auto;
   max-width: 100vh;
 }
+#right,
 #smallCardSpan,
 #listSpan {
   padding: 10px;
   background-color: #fff;
   border-radius: 14px;
   margin: 10px;
-  flex-basis: 60%;
+  flex-basis: 30%;
+  display: inline-block;
 }
-
-/* 🟡 LEFT 🟡 */
-
 #largeCardSpan {
   display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   overflow: auto;
-  max-height: 90vh;
-  flex-basis: 40%;
+  max-height: 98vh;
+  flex-basis: 70%;
 }
-
-/* /////////////// */
-/* 🔵 MOBILE 🔵 */
-/* /////////////// */
-
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 777px) {
+  .navbar {
+    top: 0;
+    width: 10rem;
+    height: 100vh;
+  }
+}
+@media only screen and (max-width: 777px) {
   #parent {
     flex-direction: column;
   }
   #largeCardSpan {
     max-height: 55vh;
   }
-  #pullSpan > button,
-  #binderSpan > button,
-  #admin > button {
-    width: 100%;
+  .navbar {
+    bottom: 0;
+    width: 100vw;
+    height: 5rem;
+    z-index: 100;
   }
-  #pullSpan > button {
-    height: 50px;
+  .mobileHide {
+    display: none;
   }
-  #binderSpan,
-  #pullSpan,
-  #admin {
-    display: flex;
+  .navbar-nav {
+    flex-direction: row;
+  }
+  .nav-link {
+    justify-content: center;
+  }
+  main {
+    margin: 0;
   }
 }
