fill set dropdown, and fetch metadata & cards

--- a/v2-css.css
+++ b/v2-css.css
@@ -70,6 +70,11 @@ main {
   letter-spacing: 0.1ch;
   width: 100%;
 }
+select {
+  padding: 0.5rem;
+  border-radius: 0.4rem;
+  width: 8rem;
+}
 .hide {
   display: none !important;
 }
